2008-04-21  Bruno Haible  <bruno@clisp.org>

	Add version metainformation in Windows resource format.
	* configure.ac: Invoke LT_LANG for Windows Resources.
	(WOE32): New conditional.
	* lib/libunistring.rc: New file.
	* lib/Makefile.am (EXTRA_DIST): Add it.
	(WOE32_LIBADD): New variable.
	(libunistring.res.lo): New rule.
	(libunistring_la_LIBADD, libunistring_la_DEPENDENCIES): Add
	WOE32_LIBADD.
	(config.h): Don't compile *.res.c files.
	* build-aux/windres-options: New file, from GNU gettext.
	* Makefile.am (EXTRA_DIST): Add it.

2008-04-21  Bruno Haible  <bruno@clisp.org>

	Add version metainformation.
	* configure.ac (AC_CONFIG_SRCDIR): Use lib/unistring/version.in.h.
	(HEXVERSION): New variable, computed from VERSION.
	(AC_CONFIG_FILES): Add lib/unistring/version.h.
	* lib/unistring/version.in.h: New file.
	* lib/version.c: New file.
	* lib/Makefile.am (libunistring_la_SOURCES): Add version.c.
	(nobase_nodist_include_HEADERS): Add unistring/version.h.
	(HEADERS_WITH_EXTERNS): Add unistring/version.in.h.
	* woe32dll/unistring-exports.c: Add _libunistring_version.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Avoid compilation errors in tests/uninorm/test-nf*.c.
	* configure.ac (WOE32DLL): Define also as a C macro.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Avoid a compilation error of tests/unictype/test-categ_none.c.
	* gnulib-local/modules/unictype/category-none-tests.diff: New file.
	* gnulib-local/Makefile.am (EXTRA_DIST): Add it.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Don't commit files brought in by autogen.sh.
	* build-aux/config.guess: Remove from git repository.
	* build-aux/config.sub: Likewise.

2008-04-19  Bruno Haible  <bruno@clisp.org>

	Add support for building as shared library on Cygwin and mingw.
	* autogen.sh: Insert LIBUNISTRING_DLL_VARIABLE tokens into
	lib/unictype.h and lib/uninorm.h.
	* gnulib-local/lib/unictype.h.diff: Add an include of
	<unistring/woe32dll.h>.
	* gnulib-local/lib/uninorm.h.diff: New file.